Style `+` button a bit smaller and fix horizontal alignment
It's not exactly the same height as the search bar but it's an
improvement
refs #5280

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -1,3 +1,7 @@
+#title-bar {
+  width: 100%;
+}
+
 #site-search {
   margin: 1.5em 0;
 }
